# PDF_Viewer

./: .gitignore  00-START-HERE.md  ARCHITECTURE.md  CMakeLists.txt  CMakeSettings.json  CURSOR-Complete-Design-Package.md  CURSOR-Phase-1A-1B-Prompt.md  CURSOR-Setup-Instructions.md  DOCUMENTATION.md  KNOWN_ISSUES.md  MASTER-FILE-INDEX.md  QUICK-START.md  README-FILES-SUMMARY.md  README-NETWORK-SECURITY.md  README-SECURITY.md  README.md  build_release.bat  check_qt6_pdf.bat  rebuild.bat
build-msvc/: ALL_BUILD.vcxproj  CMakeCache.txt  PDFViewer.sln  PDFViewer.vcxproj  PDFViewer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-msvc/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-msvc/.qt/rcc/: qrc_app_resources.cpp
build-msvc/PDFViewer.dir/Release/: PDFViewer.exe.recipe
build-msvc/PDFViewer.dir/Release/PDFViewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/PDFViewer_autogen/: mocs_compilation_Release.cpp
build-msvc/PDFViewer_autogen/include_Release/3YJK5W5UP7/: qrc_resources_CMAKE_.cpp
build-msvc/PDFViewer_autogen/include_Release/6DQYUKT47J/: moc_fileclipboard.cpp  moc_fileclipboard.cpp.d  moc_recentfilesmanager.cpp  moc_recentfilesmanager.cpp.d  moc_sessionmanager.cpp  moc_sessionmanager.cpp.d  moc_settingsmanager.cpp  moc_settingsmanager.cpp.d  moc_theme.cpp  moc_theme.cpp.d  moc_thumbnailcache.cpp  moc_thumbnailcache.cpp.d
build-msvc/PDFViewer_autogen/include_Release/QM7XBKFLFB/: moc_PdfRenderService.cpp  moc_PdfRenderService.cpp.d
build-msvc/PDFViewer_autogen/include_Release/UVLADIE3JM/: moc_application.cpp  moc_application.cpp.d
build-msvc/PDFViewer_autogen/include_Release/YPKJ5OE7LN/: moc_advancedsearchdialog.cpp  moc_advancedsearchdialog.cpp.d  moc_filepropertiesdialog.cpp  moc_filepropertiesdialog.cpp.d  moc_homecontentwidget.cpp  moc_homecontentwidget.cpp.d  moc_homepagewidget.cpp  moc_homepagewidget.cpp.d  moc_locationssidebarwidget.cpp  moc_locationssidebarwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_pdftestwidget.cpp  moc_pdftestwidget.cpp.d  moc_recentfileswidget.cpp  moc_recentfileswidget.cpp.d  moc_settingsdialog.cpp  moc_settingsdialog.cpp.d  moc_simplepdfwindow.cpp  moc_simplepdfwindow.cpp.d  moc_tabmanager.cpp  moc_tabmanager.cpp.d
build-msvc/PDFViewer_autogen/include_Release/ZS7QGDH25J/: moc_PageCanvasView.cpp  moc_PageCanvasView.cpp.d  moc_PdfViewerWidget.cpp  moc_PdfViewerWidget.cpp.d  moc_ThumbnailSidebarWidget.cpp  moc_ThumbnailSidebarWidget.cpp.d
build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-release/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-release/.qt/rcc/: app_resources.qrc
build-release/PDFViewer.dir/Release/: PDFViewer.exe.recipe  app.res
build-release/PDFViewer.dir/Release/PDFViewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  (+6 more)
build-release/PDFViewerInstaller.dir/Release/: PDFViewerInstaller.exe.recipe
build-simple/: CMakeCache.txt
build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PDFViewer.sln  PDFViewer.vcxproj  PDFViewer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-test/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
installer/: Downloader.cpp  Downloader.h  InstallActions.cpp  InstallActions.h  InstallerConfig.h  InstallerWizard.cpp  InstallerWizard.h  ZipExtractor.cpp  ZipExtractor.h  main.cpp
installer/pages/: DownloadPage.cpp  DownloadPage.h  FinishPage.cpp  FinishPage.h  InstallLocationPage.cpp  InstallLocationPage.h  InstallProgressPage.cpp  InstallProgressPage.h  LicensePage.cpp  LicensePage.h  WelcomePage.cpp  WelcomePage.h
resources/: app.rc  resources.qrc
src/: application.cpp  application.h  main.cpp
src/config/: debuglog.cpp  debuglog.h  fileclipboard.cpp  fileclipboard.h  recentfilesmanager.cpp  recentfilesmanager.h  searchquery.h  sessionmanager.cpp  sessionmanager.h  settingsmanager.cpp  settingsmanager.h  theme.cpp  theme.h  thumbnailcache.cpp  thumbnailcache.h
src/pdf/: Annotation.cpp  Annotation.h  AnnotationStore.cpp  AnnotationStore.h  IPdfRenderer.h  MuPdfRenderer.cpp  MuPdfRenderer.h  NullPdfRenderer.h  PageRenderCache.cpp  PageRenderCache.h  PdfRenderService.cpp  PdfRenderService.h  PdfRendererFactory.cpp  PdfRendererFactory.h  QtPdfRenderer.cpp  QtPdfRenderer.h
src/ui/: advancedsearchdialog.cpp  advancedsearchdialog.h  filepropertiesdialog.cpp  filepropertiesdialog.h  homecontentwidget.cpp  homecontentwidget.h  homepagewidget.cpp  homepagewidget.h  locationssidebarwidget.cpp  locationssidebarwidget.h  mainwindow.cpp  mainwindow.h  pdftabwidget.cpp  pdftabwidget.h  pdftestwidget.cpp  pdftestwidget.h  recentfileswidget.cpp  recentfileswidget.h  settingsdialog.cpp  settingsdialog.h  simplepdfwindow.cpp  simplepdfwindow.h  tabmanager.cpp  tabmanager.h
src/ui/pdf/: AnnotationOverlayWidget.cpp  AnnotationOverlayWidget.h  PageCanvasView.cpp  PageCanvasView.h  PdfViewerWidget.cpp  PdfViewerWidget.h  ThumbnailSidebarWidget.cpp  ThumbnailSidebarWidget.h
src/ui/styles/: common.qss  dark.qss  light.qss
(+24 files in other folders)
